--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -2,5 +2,6 @@
 
 [passwords]
 # Follow the rule: username = "password"
-admin = "admin"
-bob_bar = "admin"
+PhoenixRider82 = "jF7#pRt!9zA1"
+StellarNova53 = "W!r3LsP&8hQz"
+QuantumWhale91 = "B2@nV4t#6xHp"
